認証の実装

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -26,5 +26,12 @@
         ]
       }
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-12-26T04:52:47.860Z"
+    }
   }
 }
